tests/errors/semantics/invalid_not_opreand.odl
main :: () -> void  {
    not 0;
};